@@ -3,6 +3,7 @@ version 1.0-beta - XX-XXX-2011
 . [NEW-MAC]: EventDispatcher: Added support for touches events
 . [FIX-MAC]: EventDispatcher: flagsChanged is triggered correctly (issue #1066)
 . [FIX-MAC]: EventDispatcher: queue & dispatch events are synced (issue #1083)
+. [FIX-MAC]: LabelTTF: alignment works OK (issue #1073)
 . [FIX-MAC]: Menu: Menu doesn't hang up with invisible menus (issue #1070)
 . [FIX-MAC]: Templates includes AudioToolbox and OpenAL frameworks
 
